--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body> Hello World!
+  <body> Hello World, We're developers!
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
