--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -8,6 +8,11 @@
 
   <body>
     <header id="header">Playstation 5 Landing Page
+      <nav id="nav-bar">
+        <ul class="nav-link"><a href="">Home</a></ul>
+        <ul class="nav-link"><a href="">Products</a></ul>
+        <ul class="nav-link"><a href="">About us</a></ul>
+      </nav>
       <img id="header-img" src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2020/01/ps-logo.jpg">
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
