--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -9,15 +9,28 @@
   <body>
     <header id="header">Playstation 5 Landing Page
       <nav id="nav-bar">
-        <ul><a class="nav-link" href="#home">Home</a></ul>
+        <ul><a class="nav-link" href="#features">Feature</a></ul>
         <ul><a class="nav-link" href="#products">Products</a></ul>
         <ul><a class="nav-link" href="#about-us">About us</a></ul>
       </nav>
       <img id="header-img" src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2020/01/ps-logo.jpg">
     </header>
-    <section>
+    <section id="features">
+        <ul>More power</ul>
+        <ul>Better graphics</ul>
+        <ul>Extra fun</ul>
+    </section>
+    <section id="products">
       <iframe id="video" width="950" height="475" src="https://www.youtube.com/embed/dU13ewJeAtI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen" height="400" allowfullscreen></iframe>
     </section>
+    <section id="about-us">
+      <p>We're Sony</p> 
+    </section>
+
+    <form id="form" >
+      <input type="email" >
+    </form>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
