--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <form id="form" >
-      <input type="email" >
+      <input type="email"  id='email' placeholder="Please enter your email address">
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
