stories 11 and 12 added

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -27,8 +27,9 @@
       <p>We're Sony</p> 
     </section>
 
-    <form id="form" >
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
       <input type="email"  id='email' placeholder="Please enter your email address">
+      <input type="submit" id="input">
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
