Stories 13, 14 and 15 added

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -28,8 +28,8 @@
     </section>
 
     <form id="form" action="https://www.freecodecamp.com/email-submit">
-      <input type="email"  id='email' placeholder="Please enter your email address">
-      <input type="submit" id="input">
+      <input name="email" type="email"  id="email" placeholder="Please enter your email address">
+      <input type="submit" id="submit">
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
