--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -31,8 +31,10 @@
     </section>
 
     <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <div id="form-div">
       <input name="email" type="email"  id="email" placeholder="Please enter your email address">
       <input type="submit" id="submit">
+    </div>
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
